	* configure.in: Check for GMP 4.1 or newer.  Check for MPFR 2.2.0 	or newer. 	* configure: Regenerated. 	* doc/install.texi: Document required versions of GMP and MPFR. 	* fortran/arith.c: Conditionally include arctangent2(). 	(gfc_check_real_range): Use mpfr_subnormalize in preference to local 	hack. 	* fortran/trans-intrinsic.c (gfc_get_intrinsic_lib_fndecl): Append 	l for long double functions. 	* fortran/simplify.c: Wrap Copyright to new line. 	(gfc_simplify_atan2): Use mpfr_atan2 in preference to arctangent2().         (gfc_simplify_log): Ditto.

PR fortran/28276
	* fortran/simplify.c (gfc_simplify_exponent): Use mpfr_get_exp in
	preference to broken local hack.

	PR fortran/27021
	* fortran/simplify.c (gfc_simplify_nearest): Use mpfr_nexttoward and
	mpfr_subnormalize to handle numbers near zero in preference to broken
	 local hack.

	PR fortran/28276
	* testsuite/gfortran.dg/exponent_1.f90: New test.

	PR fortran/27021
	* testsuite/gfortran.dg/nearest_1.f90: New test.



git-svn-id: svn+ssh://gcc.gnu.org/svn/gcc/trunk@117257 138bc75d-0d04-0410-961f-82ee72b054a4